<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LocationActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="1200dp"
            android:layout_height="1000dp"
            app:srcCompat="@drawable/app_background"
            android:id="@+id/background_tiger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintHorizontal_bias="0.56"/>
    <Button
            android:id="@+id/Button2"
            android:text="@string/size_2"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textSize="40sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/Button4"/>

    <Button
            android:id="@+id/Button4"
            android:text="@string/size_4"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textSize="40sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button2"
            app:layout_constraintBottom_toTopOf="@+id/Button6"/>

    <Button
            android:id="@+id/Button6"
            android:text="@string/size_6"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textSize="40sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button4"
            app:layout_constraintBottom_toTopOf="@+id/Button8"/>

    <Button
            android:id="@+id/Button8"
            android:text="@string/size_8"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textSize="40sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button6"
            app:layout_constraintBottom_toTopOf="@+id/Button10"/>

    <Button
            android:id="@+id/Button10"
            android:text="@string/size_10"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textSize="40sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button8"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>